# Mailing_list_management_service

./: 123  bd.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_list.html
mailings/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
mailings/management/commands/: runapscheduler.py  single_newsletter.py
mailings/migrations/: 0001_initial.py  0002_newsletter_time_last_shipment.py  0003_alter_newsletter_periodicity_alter_newsletter_status.py  0004_logs_comments_logs_mailing_logs_name_newsletter_name.py  0005_alter_logs_attempt.py  0006_alter_logs_response.py  0007_client_owner_logs_owner_message_owner_and_more.py  0008_alter_newsletter_options.py  0009_alter_client_email.py  0010_newsletter_is_active.py
mailings/templates/mailings/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  index.html  logs_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  newsletter_detail.html  newsletter_form.html  newsletter_list.html
mailings/templates/mailings/includes/: menu.html
myproject/: settings.py  urls.py
user/: admin.py  forms.py  models.py  urls.py  views.py
user/management/commands/: csu.py
user/migrations/: 0001_initial.py  0002_user_phone.py  0003_user_token.py  0004_alter_user_options.py  0005_user_avatar_user_country.py
user/templates/user/: login.html  user_detail.html  user_form.html  user_list.html
